isl-rs/src/aff.rs

  pub fn isl_multi_pw_aff_scale_val(multi: MultiPwAff, v: Val) -> Option<MultiPwAff>;
  pub fn isl_multi_pw_aff_scale_down_val(multi: MultiPwAff, v: Val) -> Option<MultiPwAff>;
  pub fn isl_multi_pw_aff_scale_multi_val(multi: MultiPwAff, mv: MultiVal) -> Option<MultiPwAff>;
  pub fn isl_multi_pw_aff_scale_down_multi_val(multi: MultiPwAff, mv: MultiVal) -> Option<MultiPwAff>;
  pub fn isl_multi_pw_aff_mod_multi_val(multi: MultiPwAff, mv: MultiVal) -> Option<MultiPwAff>;
  pub fn isl_multi_pw_aff_add(multi1: MultiPwAff, multi2: MultiPwAff) -> Option<MultiPwAff>;
  pub fn isl_multi_pw_aff_sub(multi1: MultiPwAff, multi2: MultiPwAff) -> Option<MultiPwAff>;
  pub fn isl_multi_pw_aff_neg(multi: MultiPwAff) -> Option<MultiPwAff>;
  pub fn isl_multi_pw_aff_min(multi1: MultiPwAff, multi2: MultiPwAff) -> Option<MultiPwAff>;
  pub fn isl_multi_pw_aff_max(multi1: MultiPwAff, multi2: MultiPwAff) -> Option<MultiPwAff>;
  pub fn isl_multi_pw_aff_add_constant_val(mpa: MultiPwAff, v: Val) -> Option<MultiPwAff>;
  pub fn isl_multi_pw_aff_add_constant_multi_val(mpa: MultiPwAff, mv: MultiVal) -> Option<MultiPwAff>;
  pub fn isl_multi_pw_aff_zero(space: Space) -> Option<MultiPwAff>;
  pub fn isl_multi_pw_aff_involves_nan(multi: MultiPwAffRef) -> Bool;
  pub fn isl_multi_pw_aff_dim(multi: MultiPwAffRef, type_: DimType) -> c_int;
  pub fn isl_multi_pw_aff_drop_dims(multi: MultiPwAff, type_: DimType, first: c_uint, n: c_uint) -> Option<MultiPwAff>;
  pub fn isl_multi_pw_aff_involves_dims(multi: MultiPwAffRef, type_: DimType, first: c_uint, n: c_uint) -> Bool;
  pub fn isl_multi_pw_aff_insert_dims(multi: MultiPwAff, type_: DimType, first: c_uint, n: c_uint) -> Option<MultiPwAff>;
  pub fn isl_multi_pw_aff_add_dims(multi: MultiPwAff, type_: DimType, n: c_uint) -> Option<MultiPwAff>;
  pub fn isl_multi_pw_aff_project_domain_on_params(multi: MultiPwAff) -> Option<MultiPwAff>;
  pub fn isl_multi_pw_aff_find_dim_by_name(multi: MultiPwAffRef, type_: DimType, name: Option<CStr>) -> c_int;
  pub fn isl_multi_pw_aff_find_dim_by_id(multi: MultiPwAffRef, type_: DimType, id: IdRef) -> c_int;
  pub fn isl_multi_pw_aff_get_dim_id(multi: MultiPwAffRef, type_: DimType, pos: c_uint) -> Option<Id>;
  pub fn isl_multi_pw_aff_set_dim_name(multi: MultiPwAff, type_: DimType, pos: c_uint, s: Option<CStr>) -> Option<MultiPwAff>;
  pub fn isl_multi_pw_aff_set_dim_id(multi: MultiPwAff, type_: DimType, pos: c_uint, id: Id) -> Option<MultiPwAff>;
  pub fn isl_multi_pw_aff_insert_domain(multi: MultiPwAff, domain: Space) -> Option<MultiPwAff>;
  pub fn isl_multi_pw_aff_get_tuple_name(multi: MultiPwAffRef, type_: DimType) -> Option<CStr>;
  pub fn isl_multi_pw_aff_has_tuple_id(multi: MultiPwAffRef, type_: DimType) -> Bool;
  pub fn isl_multi_pw_aff_get_tuple_id(multi: MultiPwAffRef, type_: DimType) -> Option<Id>;
  pub fn isl_multi_pw_aff_set_tuple_name(multi: MultiPwAff, type_: DimType, s: Option<CStr>) -> Option<MultiPwAff>;
  pub fn isl_multi_pw_aff_set_tuple_id(multi: MultiPwAff, type_: DimType, id: Id) -> Option<MultiPwAff>;
  pub fn isl_multi_pw_aff_reset_tuple_id(multi: MultiPwAff, type_: DimType) -> Option<MultiPwAff>;
  pub fn isl_multi_pw_aff_product(multi1: MultiPwAff, multi2: MultiPwAff) -> Option<MultiPwAff>;
  pub fn isl_multi_pw_aff_splice(multi1: MultiPwAff, in_pos: c_uint, out_pos: c_uint, multi2: MultiPwAff) -> Option<MultiPwAff>;
  pub fn isl_multi_pw_aff_bind_domain(multi: MultiPwAff, tuple: MultiId) -> Option<MultiPwAff>;
  pub fn isl_multi_pw_aff_bind_domain_wrapped_domain(multi: MultiPwAff, tuple: MultiId) -> Option<MultiPwAff>;
  pub fn isl_multi_pw_aff_involves_param_id(multi: MultiPwAffRef, id: IdRef) -> Bool;
  pub fn isl_multi_pw_aff_involves_param_id_list(multi: MultiPwAffRef, list: IdListRef) -> Bool;
  pub fn isl_multi_pw_aff_unbind_params_insert_domain(multi: MultiPwAff, domain: MultiId) -> Option<MultiPwAff>;
  pub fn isl_pw_multi_aff_zero(space: Space) -> Option<PwMultiAff>;
  pub fn isl_pw_multi_aff_identity_on_domain_space(space: Space) -> Option<PwMultiAff>;
  pub fn isl_pw_multi_aff_identity(space: Space) -> Option<PwMultiAff>;
  pub fn isl_pw_multi_aff_domain_map(space: Space) -> Option<PwMultiAff>;
  pub fn isl_pw_multi_aff_range_map(space: Space) -> Option<PwMultiAff>;
  pub fn isl_pw_multi_aff_project_out_map(space: Space, type_: DimType, first: c_uint, n: c_uint) -> Option<PwMultiAff>;
  pub fn isl_pw_multi_aff_from_multi_aff(ma: MultiAff) -> Option<PwMultiAff>;
  pub fn isl_pw_multi_aff_from_pw_aff(pa: PwAff) -> Option<PwMultiAff>;
  pub fn isl_pw_multi_aff_alloc(set: Set, maff: MultiAff) -> Option<PwMultiAff>;
  pub fn isl_pw_multi_aff_copy(pma: PwMultiAffRef) -> Option<PwMultiAff>;
  pub fn isl_pw_multi_aff_free(pma: PwMultiAff) -> *mut c_void;
  pub fn isl_pw_multi_aff_dim(pma: PwMultiAffRef, type_: DimType) -> c_int;
  pub fn isl_pw_multi_aff_involves_locals(pma: PwMultiAffRef) -> Bool;
  pub fn isl_pw_multi_aff_involves_param_id(pma: PwMultiAffRef, id: IdRef) -> Bool;
  pub fn isl_pw_multi_aff_involves_dims(pma: PwMultiAffRef, type_: DimType, first: c_uint, n: c_uint) -> Bool;
  pub fn isl_pw_multi_aff_get_pw_aff(pma: PwMultiAffRef, pos: c_int) -> Option<PwAff>;
  pub fn isl_pw_multi_aff_set_pw_aff(pma: PwMultiAff, pos: c_uint, pa: PwAff) -> Option<PwMultiAff>;
  pub fn isl_pw_multi_aff_get_ctx(pma: PwMultiAffRef) -> Option<CtxRef>;
  pub fn isl_pw_multi_aff_get_domain_space(pma: PwMultiAffRef) -> Option<Space>;
  pub fn isl_pw_multi_aff_get_space(pma: PwMultiAffRef) -> Option<Space>;
  pub fn isl_pw_multi_aff_has_tuple_name(pma: PwMultiAffRef, type_: DimType) -> Bool;
  pub fn isl_pw_multi_aff_get_tuple_name(pma: PwMultiAffRef, type_: DimType) -> Option<CStr>;
  pub fn isl_pw_multi_aff_get_tuple_id(pma: PwMultiAffRef, type_: DimType) -> Option<Id>;
  pub fn isl_pw_multi_aff_has_tuple_id(pma: PwMultiAffRef, type_: DimType) -> Bool;
  pub fn isl_pw_multi_aff_set_tuple_id(pma: PwMultiAff, type_: DimType, id: Id) -> Option<PwMultiAff>;
  pub fn isl_pw_multi_aff_reset_tuple_id(pma: PwMultiAff, type_: DimType) -> Option<PwMultiAff>;
  pub fn isl_pw_multi_aff_reset_user(pma: PwMultiAff) -> Option<PwMultiAff>;
  pub fn isl_pw_multi_aff_find_dim_by_name(pma: PwMultiAffRef, type_: DimType, name: Option<CStr>) -> c_int;
  pub fn isl_pw_multi_aff_drop_dims(pma: PwMultiAff, type_: DimType, first: c_uint, n: c_uint) -> Option<PwMultiAff>;
  pub fn isl_pw_multi_aff_domain(pma: PwMultiAff) -> Option<Set>;
  pub fn isl_pw_multi_aff_empty(space: Space) -> Option<PwMultiAff>;
  pub fn isl_pw_multi_aff_from_domain(set: Set) -> Option<PwMultiAff>;
  pub fn isl_pw_multi_aff_multi_val_on_domain(domain: Set, mv: MultiVal) -> Option<PwMultiAff>;
  pub fn isl_pw_multi_aff_get_dim_name(pma: PwMultiAffRef, type_: DimType, pos: c_uint) -> Option<CStr>;
  pub fn isl_pw_multi_aff_get_dim_id(pma: PwMultiAffRef, type_: DimType, pos: c_uint) -> Option<Id>;
  pub fn isl_pw_multi_aff_set_dim_id(pma: PwMultiAff, type_: DimType, pos: c_uint, id: Id) -> Option<PwMultiAff>;
  pub fn isl_pw_multi_aff_involves_nan(pma: PwMultiAffRef) -> Bool;
  pub fn isl_pw_multi_aff_plain_is_equal(pma1: PwMultiAffRef, pma2: PwMultiAffRef) -> Bool;
  pub fn isl_pw_multi_aff_is_equal(pma1: PwMultiAffRef, pma2: PwMultiAffRef) -> Bool;
  pub fn isl_pw_multi_aff_fix_si(pma: PwMultiAff, type_: DimType, pos: c_uint, value: c_int) -> Option<PwMultiAff>;
  pub fn isl_pw_multi_aff_union_add(pma1: PwMultiAff, pma2: PwMultiAff) -> Option<PwMultiAff>;
  pub fn isl_pw_multi_aff_neg(pma: PwMultiAff) -> Option<PwMultiAff>;
  pub fn isl_pw_multi_aff_add(pma1: PwMultiAff, pma2: PwMultiAff) -> Option<PwMultiAff>;
  pub fn isl_pw_multi_aff_sub(pma1: PwMultiAff, pma2: PwMultiAff) -> Option<PwMultiAff>;
  pub fn isl_pw_multi_aff_add_constant_val(pma: PwMultiAff, v: Val) -> Option<PwMultiAff>;
  pub fn isl_pw_multi_aff_add_constant_multi_val(pma: PwMultiAff, mv: MultiVal) -> Option<PwMultiAff>;
  pub fn isl_pw_multi_aff_scale_val(pma: PwMultiAff, v: Val) -> Option<PwMultiAff>;
  pub fn isl_pw_multi_aff_scale_down_val(pma: PwMultiAff, v: Val) -> Option<PwMultiAff>;
  pub fn isl_pw_multi_aff_scale_multi_val(pma: PwMultiAff, mv: MultiVal) -> Option<PwMultiAff>;
  pub fn isl_pw_multi_aff_union_lexmin(pma1: PwMultiAff, pma2: PwMultiAff) -> Option<PwMultiAff>;
  pub fn isl_pw_multi_aff_union_lexmax(pma1: PwMultiAff, pma2: PwMultiAff) -> Option<PwMultiAff>;
  pub fn isl_multi_aff_flatten_domain(ma: MultiAff) -> Option<MultiAff>;
  pub fn isl_pw_multi_aff_range_product(pma1: PwMultiAff, pma2: PwMultiAff) -> Option<PwMultiAff>;
  pub fn isl_pw_multi_aff_flat_range_product(pma1: PwMultiAff, pma2: PwMultiAff) -> Option<PwMultiAff>;
  pub fn isl_pw_multi_aff_product(pma1: PwMultiAff, pma2: PwMultiAff) -> Option<PwMultiAff>;
  pub fn isl_pw_multi_aff_range_factor_domain(pma: PwMultiAff) -> Option<PwMultiAff>;
  pub fn isl_pw_multi_aff_range_factor_range(pma: PwMultiAff) -> Option<PwMultiAff>;
  pub fn isl_pw_multi_aff_intersect_params(pma: PwMultiAff, set: Set) -> Option<PwMultiAff>;
  pub fn isl_pw_multi_aff_intersect_domain(pma: PwMultiAff, set: Set) -> Option<PwMultiAff>;
  pub fn isl_pw_multi_aff_intersect_domain_wrapped_domain(pma: PwMultiAff, set: Set) -> Option<PwMultiAff>;
  pub fn isl_pw_multi_aff_intersect_domain_wrapped_range(pma: PwMultiAff, set: Set) -> Option<PwMultiAff>;
  pub fn isl_pw_multi_aff_subtract_domain(pma: PwMultiAff, set: Set) -> Option<PwMultiAff>;
  pub fn isl_pw_multi_aff_insert_domain(pma: PwMultiAff, domain: Space) -> Option<PwMultiAff>;
  pub fn isl_pw_multi_aff_project_domain_on_params(pma: PwMultiAff) -> Option<PwMultiAff>;
  pub fn isl_pw_multi_aff_align_params(pma: PwMultiAff, model: Space) -> Option<PwMultiAff>;
  pub fn isl_pw_multi_aff_drop_unused_params(pma: PwMultiAff) -> Option<PwMultiAff>;
  pub fn isl_pw_multi_aff_coalesce(pma: PwMultiAff) -> Option<PwMultiAff>;
  pub fn isl_pw_multi_aff_gist_params(pma: PwMultiAff, set: Set) -> Option<PwMultiAff>;
  pub fn isl_pw_multi_aff_gist(pma: PwMultiAff, set: Set) -> Option<PwMultiAff>;
  pub fn isl_pw_multi_aff_pullback_multi_aff(pma: PwMultiAff, ma: MultiAff) -> Option<PwMultiAff>;
  pub fn isl_pw_multi_aff_pullback_pw_multi_aff(pma1: PwMultiAff, pma2: PwMultiAff) -> Option<PwMultiAff>;
  pub fn isl_pw_multi_aff_preimage_domain_wrapped_domain_pw_multi_aff(pma1: PwMultiAff, pma2: PwMultiAff) -> Option<PwMultiAff>;
  pub fn isl_pw_multi_aff_n_piece(pma: PwMultiAffRef) -> c_int;
  pub fn isl_pw_multi_aff_foreach_piece(pma: PwMultiAffRef, fn_: unsafe extern "C" fn(set: Set, maff: MultiAff, user: *mut c_void) -> Stat, user: *mut c_void) -> Stat;
  pub fn isl_pw_multi_aff_every_piece(pma: PwMultiAffRef, test: unsafe extern "C" fn(set: SetRef, ma: MultiAffRef, user: *mut c_void) -> Bool, user: *mut c_void) -> Bool;
  pub fn isl_pw_multi_aff_isa_multi_aff(pma: PwMultiAffRef) -> Bool;
  pub fn isl_pw_multi_aff_as_multi_aff(pma: PwMultiAff) -> Option<MultiAff>;
  pub fn isl_map_from_pw_multi_aff(pma: PwMultiAff) -> Option<Map>;
  pub fn isl_set_from_pw_multi_aff(pma: PwMultiAff) -> Option<Set>;
  pub fn isl_pw_multi_aff_to_str(pma: PwMultiAffRef) -> Option<CString>;
  pub fn isl_printer_print_pw_multi_aff(p: Printer, pma: PwMultiAffRef) -> Option<Printer>;
  pub fn isl_pw_multi_aff_from_set(set: Set) -> Option<PwMultiAff>;
  pub fn isl_pw_multi_aff_from_map(map: Map) -> Option<PwMultiAff>;
  pub fn isl_pw_multi_aff_bind_domain(pma: PwMultiAff, tuple: MultiId) -> Option<PwMultiAff>;
  pub fn isl_pw_multi_aff_bind_domain_wrapped_domain(pma: PwMultiAff, tuple: MultiId) -> Option<PwMultiAff>;
  pub fn isl_pw_multi_aff_read_from_str(ctx: CtxRef, str: Option<CStr>) -> Option<PwMultiAff>;
  pub fn isl_pw_multi_aff_dump(pma: PwMultiAffRef) -> ();
  pub fn isl_union_pw_multi_aff_empty_ctx(ctx: CtxRef) -> Option<UnionPwMultiAff>;
  pub fn isl_union_pw_multi_aff_empty_space(space: Space) -> Option<UnionPwMultiAff>;
  pub fn isl_union_pw_multi_aff_empty(space: Space) -> Option<UnionPwMultiAff>;
  pub fn isl_union_pw_multi_aff_from_aff(aff: Aff) -> Option<UnionPwMultiAff>;
